<resources>
    <string name="app_name">Job Applications System</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginForm">Login Form</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="passwordU">New Password</string>

    <string name="userNameR">Email</string>
    <string name="passwordR">xxxxxxxx</string>

    <string name="login">Login</string>
    <string name="registerBtn">Sign up</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid User </string>
    <string name="invalid_password">The password is very short</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_invalid_email">Invalid User </string>
    <string name="error_invalid_password">The password is very short</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">The field is obligatory</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>


    <string name="tvT">Job Application</string>
    <string name="tvDescrip">Complete the form to join us.</string>
    <string name="tvN">Full name</string>
    <string name="etN">Name</string>
    <string name="tvCA">Current Address</string>
    <string name="etCA">Address</string>
    <string name="etCA2">Address 2</string>
    <string name="tvEA">Email</string>
    <string name="etEA">user@email.com</string>
    <string name="tvPN">Phone Number</string>
    <string name="etPN">+506 88888888</string>
    <string name="etC">City</string>
    <string name="etP">State</string>
    <string name="etPC">Postal C</string>
    <string name="tvAP">Applying for Position</string>
    <string name="tvSD">Start date</string>
    <string name="etSD">MM-DD-YYYY</string>
    <string name="btnList">Sent</string>
    <string name="btnUpload">Upload</string>
    <string name="etDatePicker">Select the Date</string>
    <string name="tvBtnCv">Upload Resume</string>

    <string name="etFirstName">First Name</string>
    <string name="etLastName">Last Name</string>
    <string name="etStreetAddress">Street Address</string>
    <string name="etStreetAddress2">Second Street Address</string>
    <string name="etEmail">Email</string>
    <string name="etAreaCode">Area Code</string>
    <string name="etPhoneNumber">Phone Number</string>
    <string name="spinnerAP">Position</string>
    <string name="etCity">City</string>
    <string name="etState">State/Province</string>
    <string name="etPostalCode">Postal/Zip Code</string>

    <string name="preference_user_key">com.jobApplication.com</string>
    <string name="preference_user_key_default">none</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_drawer">Navigation Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Applications Job</string>
    <string name="nav_header_subtitle">www.jobApplication.una.ac.cr</string>
    <string name="menu_home">Home</string>

    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="my_application">Job Applications</string>
    <string name="action_search">Search</string>

    <string name="forgotP">Change Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="btnSentU">Update</string>
    <string name="oldPassword">Old Password</string>
    <string name="chgPass">Changing Password</string>

</resources>
