<TableLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_login"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow android:padding="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/loginForm"
            android:textColor="#fff"
            android:textSize="25sp"
            android:fontFamily="@font/coolveticarg"
            android:textStyle="bold"
            />
    </TableRow>

    <TableRow
        android:background="@drawable/cajat"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/userName"
            android:textColor="#fff"
            android:fontFamily="@font/coolveticarg"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/userName"
            android:textColor="#fff"
            android:inputType="textPersonName"
            android:textSize="17sp" />
    </TableRow>

    <TableRow
        android:background="@drawable/cajat"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/password"
            android:textColor="#fff"
            android:fontFamily="@font/coolveticarg"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:textSize="17sp" />
    </TableRow>


    <TableRow android:layout_marginTop="20dp">

        <Button
            android:id="@+id/loginBtn"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textColor="@drawable/txt_btn_login"
            android:textSize="25sp"
            android:fontFamily="@font/coolveticarg"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>